--- a/index.css
+++ b/index.css
@@ -129,6 +129,7 @@ nav{
     /* border: 1px solid black; */
 }
 
+/* what we do */
 .what-we-do .title {
     margin-bottom: 20px;
 }
@@ -237,6 +238,7 @@ nav{
     border-radius: 5px;
 }
 
+/* work */
 #work {
     background-image: url('./public/work.png');
     background-repeat: no-repeat;  
@@ -280,10 +282,144 @@ nav{
     font-size: small;
     margin: auto;
     background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
 }
 
 #rating > div > div > span{
     color: gray;
+}
+
+/* pricing */
+.pricing{
+    margin-top: 15rem;
+}
+
+.pricing .pricing-container {
+    padding: 50px 200px;
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+}
+
+.pricing .pricing-title {
+    margin-bottom: 20px;
+}
+
+.pricing .pricing-title h3 {
+    font-family: "Raleway", sans-serif;
+    font-size: 60px;
+}
+
+.pricing-para {
+    color: var(--secondary-color);
+    font-size: 14px;
+}
+
+.pricing .pricing-content-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.pricing .pricing-content-left .pricing-content-2 {
+    background: white;
+    border-radius: 20px;
+    padding: 30px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+}
+
+.pricing .pricing-content-left .pricing-content-2 h4 {
+    font-family: "Raleway", sans-serif;
+    font-size: 34.07px;
+    line-height: 40.88px;
+}
+
+.pricing .pricing-content-left .pricing-content-2 button {
+    width: 100%;
+    background-color: var(--tertiary);
+    border-radius: 10px;
+    color: white;
+    border: none;
+    font-family: "Raleway", sans-serif;
+    font-size: 16px;
+    padding: 16px 20px;
+    margin-top: 20px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+}
+
+.pricing .pricing-content-right {
+    background-color: white;
+    padding: 30px;
+    border-radius: 20px;
+    width: 100%;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+}
+
+.pricing .pricing-content-right h5 {
+    font-family: "Raleway", sans-serif;
+    font-size: 30px;
+    color: var(--primary-color);
+}
+
+.pricing .pricing-content-right .pricing-services {
+    display: flex;
+}
+
+.pricing .pricing-content-right .pricing-services ul {
+    list-style: none;
+    margin-bottom: 20px;
+}
+
+.pricing .pricing-content-right .pricing-services ul:last-child {
+    margin-left: 20%;
+}
+
+.pricing .pricing-content-right p {
+    margin: 30px 0
+}
+
+.pricing .pricing-content-right .pricing-services ul li {
+    display: flex;
+    align-items: center;
+    margin: 10px 0;
+}
+
+.pricing .pricing-content-right .pricing-services ul li span {
+    font-size: 14px;
+    color: var(--primary-color);
+    font-weight: 400;
+    font-family: "inter";
+    margin-left: 10px
+}
+
+.pricing .pricing-content-right .price-content {
+    display: flex;
+    justify-content: space-between;
+    background-color: #F5F8FF;
+    border-radius: 10px;
+    padding: 26px;
+}
+
+.pricing .pricing-content-right .price-content h2 {
+    font-size: 60px;
+    font-family: "inter";
+}
+
+.pricing .pricing-content-right .price-content h2 span {
+    font-size: 20px;
+    color: var(--secondary-color);
+    font-family: "inter";
+    font-weight: 400;
+}
+
+.pricing .pricing-content-right .price-content .arrow-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -368,6 +504,12 @@ nav{
     }
 }
 
+@media screen and (max-width:1020px) {
+    .pricing .pricing-container{
+        padding: 50px 100px;
+    }
+}
+
 @media (max-width: 944px){
     #header{
         font-size: 2.3rem;
@@ -432,6 +574,25 @@ nav{
         grid-column: 1 / span 2;
         grid-row: 4;
     }
+}
+
+@media screen and (max-width:820px) {
+    .pricing{
+        margin-top: 0rem;
+    }
+    .pricing .pricing-container{
+        flex-direction: column;
+    }
+    .pricing .pricing-content-right{
+        width:auto
+    }
+    .pricing .pricing-content-left .pricing-content-2{
+        margin-top: 20px;
+    }
+    .pricing .pricing-content-right .price-content h2 {
+        font-size: 30px;
+    }
+    
 }
 
 @media (max-width: 640px){
@@ -511,6 +672,12 @@ nav{
     }
 }
 
+@media screen and (max-width:480px){
+    .pricing .pricing-container{
+        padding: 50px 30px;
+    }
+}
+
 @media (max-width: 400px){
     #header{
         width: 90%;
@@ -521,5 +688,11 @@ nav{
     }
     #rating{
         font-size: xx-small;
+    }
+}
+
+@media screen and (max-width:350px){
+    .pricing .pricing-container{
+        padding: 50px 10px;
     }
 }
