--- a/index.css
+++ b/index.css
@@ -422,6 +422,74 @@ nav{
     align-items: center;
 }
 
+/* contact */
+.contact{
+    margin-top: 5rem;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.contact > div > img{
+    width: 100%;
+}
+
+.contact > div:nth-child(1){
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.contact-form > div:nth-child(1){
+    text-align: center;
+    font-size: 3rem;
+    font-weight: 600;
+}
+
+.contact-form > form{
+    margin-top: 4rem;
+}
+
+.contact-form > form > label{
+    display: block;
+    font-size: large;
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+}
+
+.contact-form > form > input{
+    width: 500px;
+    padding: 1rem 2rem;
+    border-radius: 1rem;
+    border: 1px solid gray;
+    display: block;
+    font-size: large;
+    margin-bottom: 1rem;
+}
+
+.contact-form > form > textarea{
+    width: 500px;
+    height: 150px;
+    resize: none;
+    padding: 1rem 2rem;
+    border-radius: 1rem;
+    border: 1px solid gray;
+    display: block;
+    font-size: large;
+    margin-bottom: 1rem;
+}
+
+.contact-form > form > button{
+    width: 500px;
+    resize: none;
+    padding: 1rem 2rem;
+    border-radius: 1rem;
+    font-size: large;
+    margin-bottom: 1rem;
+    color: white;
+    background-color: var(--tertiary);
+    border: none;
+}
+
 
 @media (max-width: 1210px){
     #header>div{
@@ -574,6 +642,22 @@ nav{
         grid-column: 1 / span 2;
         grid-row: 4;
     }
+
+    .contact-form > div:nth-child(1){
+        font-size: 2.5rem;
+    }
+
+    .contact-form > form > input{
+        width: 400px;
+    }
+
+    .contact-form > form > textarea{
+        width: 400px;
+    }
+
+    .contact-form > form > button{
+        width: 400px;
+    }
 }
 
 @media screen and (max-width:820px) {
@@ -622,6 +706,23 @@ nav{
     }
     #header>div{
         left: 15%
+    }
+
+    .contact-form > div:nth-child(1){
+        font-size: 1.5rem;
+    }
+
+    .contact-form > form > input{
+        width: 250px;
+    }
+
+    .contact-form > form > textarea{
+        width: 250px;
+        height: 100px;
+    }
+
+    .contact-form > form > button{
+        width: 250px;
     }
 }
 
