--- a/index.css
+++ b/index.css
@@ -490,6 +490,64 @@ nav{
     border: none;
 }
 
+/* footer */
+
+.footer{
+    position: relative;
+    width: 100%;
+    margin-top: 5rem;
+}
+
+.footer > img{
+    width: 100%;
+    height: 600px;
+}
+
+#footer-box{
+    position: absolute;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    top: 18%;
+    left: 10%;
+    width: 80%;
+    padding: 5%;
+    display: flex;
+    justify-content: space-between;
+}
+
+#footer-box>div:nth-child(1){
+    width: 40%;
+}
+
+#footer-box>div:nth-child(1){
+    width: 30%;
+    color: gray;
+    font-size: small;
+}
+
+#footer-box1-para1{
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+}
+
+#footer-box2{
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+#nav-menu-options-footer{
+    display: flex;
+    gap: 1.5rem;
+    color: gray;
+    font-size: small;
+}
+
+#footer-social-links{
+    margin-top: 3rem;
+    display: flex;
+    gap: 0.2rem;
+    flex-direction: row-reverse;
+}
 
 @media (max-width: 1210px){
     #header>div{
@@ -607,6 +665,36 @@ nav{
         top: 10%;
         left: 20%
     }
+
+    .footer > img{
+        width: 100%;
+        height: 800px;
+    }
+
+    #footer-box{
+        top: 10%;
+        width: 70%;
+        flex-direction: column;
+        gap: 5rem;
+    }
+
+    #footer-box>div:nth-child(1){
+        width: 80%;
+        margin: auto;
+    }
+    
+    #footer-box>div:nth-child(1){
+        width: 80%;
+        margin: auto;
+        font-size: small;
+    }
+
+    #nav-menu-options-footer{
+        width: 80%;
+        margin: auto;
+        display: flex;
+    }
+    
 }
 
 @media screen and (max-width:870px) {
